# outreachy-contributions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: ComPEmbed_train_features.csv  CompEmbed_test_features.csv  CompEmbed_valid_features.csv  morgan_test_features.csv  morgan_train_features.csv  morgan_valid_features.csv  test_features.csv  test_labels.csv  train_features.csv  train_labels.csv  valid_features.csv  valid_labels.csv
models/: lr_model.joblib  rf_model.joblib  svc_clf_model.joblib
notebooks/: Data_preparation.ipynb  SkinReaction_EndToEnd_Pipeline.ipynb
scripts/: data_loader_and_featurizer.py  run_model.py  utils.py
